syntax = "proto3";

option csharp_namespace = "GRPCService";
import "subcategory.proto";


package category;

service Category{
  rpc GetAllCategories(Empty) returns (ListOfCategoryObj);

}
message CategoryObj{
  int32 id =1;
  string name =2;
  repeated subcategory.SubcategoryObj subCategories =3;
}
message ListOfCategoryObj{
  repeated CategoryObj allCategories = 1;
}
message Empty{
}